# amongrust

./: .gitignore  Cargo.toml  README.md
src/: eliminated.opus  impostor.opus  main.rs  query.scm
src/testdir/: testf.rs
